# TankSync

./: .gitignore  CREATING_GITHUB_RELEASE.md  FLASHING.md  LICENSE  README.md
.github/workflows/: build-firmware.yml  deploy-cloud.yml
Receiver/: README.md  Receiver.ino  config.h  display.cpp  display.h  leds.h  lora_comm.cpp  lora_comm.h  mqtt_handler.cpp  mqtt_handler.h  tank_data.cpp  tank_data.h  wifi_manager.cpp  wifi_manager.h
Transmitter/: README.md  Transmitter.ino
docs/: RYLR998-AT-Commands.md  self-hosting.md  troubleshooting.md
firmware/: README.md
firmware/Receiver-ESP32-DevKit/: BOARD.md  CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
firmware/Receiver-ESP32-DevKit/main/: CMakeLists.txt  config.h  main.c
firmware/Receiver-ESP32-DevKit/main/boards/: devkit_pinmap.h  s3supermini_pinmap.h
firmware/Transmitter-IDF/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/receiver/: CMakeLists.txt  sdkconfig.defaults
firmware/receiver-c3/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/receiver/components/web_server/: CMakeLists.txt  web_server.c  web_server.h
firmware/receiver/main/: CMakeLists.txt  config.h
firmware/transmitter/: CMakeLists.txt  partitions.csv
firmware/v1.0/: RELEASE_NOTES.md
hardware/: BOM.csv  LICENSE  README.md  wiring.md
hardware/cases/: README.md
hardware/pcb/: README.md  pin-assignments.md  project-requirements.txt  rx-pcb-3d.step  tx-pcb-3d.step
pwa/: .env.example  LICENSE  package-cloud-lock.json  package-cloud.json  package-lock.json  package.json
(+150 files in other folders)
